# learning-grpc

./: .gitignore  .gitmodules  README.md  go.mod  justfile
go/: go.mod  go.sum
go/client/: main.go
go/client/helloworld/: helloworld.go
go/client/routeguide/: routeguide.go  routeguide_types.go
go/greeter_client/: main.go
go/greeter_server/: main.go
go/helloworld/: helloworld_grpc.pb.go
go/protobuf/helloworld/: helloworld.pb.go  helloworld_grpc.pb.go
go/protobuf/routeguide/: routeguide.pb.go  routeguide_grpc.pb.go
go/server/: main.go
go/server/helloworld/: helloworld.go
go/server/routeguide/: routeguide.go  routeguide_errors.go  routeguide_test.go
go/server/routeguide/util/: util.go  util_test.go
greeter_client/: main.go
greeter_server/: main.go
helloworld/: helloworld.pb.go  helloworld_grpc.pb.go
node/: package-lock.json  package.json  tsconfig.json
node/protobuf/googleapis/google/rpc/: code_pb.d.ts  code_pb.js  error_details_pb.d.ts  error_details_pb.js  http_pb.d.ts  http_pb.js  status_pb.d.ts  status_pb.js
node/protobuf/helloworld/: helloworld_grpc_pb.d.ts  helloworld_grpc_pb.js  helloworld_pb.js
node/protobuf/routeguide/: routeguide_grpc_pb.d.ts  routeguide_grpc_pb.js  routeguide_pb.d.ts  routeguide_pb.js
node/src/: client.ts
protobuf/helloworld/: helloworld.proto
protobuf/routeguide/: routeguide.proto
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  protobuf.rs
rust/src/protobuf/: helloworld.rs  routeguide.rs
