[package]
name = "greeter_client_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld-client"
path = "src/greeter_client.rs"

[dependencies]
anyhow = "1.0"
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.9.2"